--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <!-- FONTS -->
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Roboto:400,700|Oswald:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 
     <!-- CSS -->
@@ -35,23 +35,33 @@
     <!-- HEADER -->
     <header class="header">
         <div class="container">
-            HEADER
+            <div class="header-wrap">
+                <div class="grid-7 grid-m-12 grid-s-12">
+                    <h1>FDX Components</h1>
+                    <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, explicabo!</h2>
+                </div>
+                <div class="grid-5 grid-m-12 grid-s-12">
+                    <figure>
+                        <img src="assets/img/profile.jpg" alt="Profile">
+                    </figure>
+                </div>
+            </div>
         </div>
     </header>
     <!-- //HEADER -->
 
     <!-- CONTENT -->
-    <section class="secao">
+    <!-- <section class="secao">
         CONTENT
-    </section>
+    </section> -->
     <!-- //CONTENT -->
 
     <!-- FOOTER -->
-    <footer class="secao footer">
+   <!--  <footer class="secao footer">
         <div class="container">
             FOOTER
         </div>
-    </footer>
+    </footer> -->
     <!-- //FOOTER -->
 
     <!-- VOLTAR AO TOPO -->
@@ -88,7 +98,6 @@
     <script src="assets/js/lib/jquery-2.2.4.min.js"></script>
     <script src="assets/js/lib/jquery.mobile.custom.min.js"></script>
     <script src="assets/js/lib/slick.min.js"></script>
-    <script src="assets/js/lib/lightbox.min.js"></script>
     <script src="assets/js/lib/jquery.maskedinput.js"></script>
     <script src="assets/js/lib/parsley.min.js"></script>
     <script src="assets/js/lib/pt-br.js"></script>
