--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                 <div class="grid-7 grid-m-12 grid-s-12">
                     <h1>FDX Components</h1>
                     <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, explicabo!</h2>
+                    <div class="btn-container">
+                        <a href="#" class="btn">Download</a>
+                    </div>
                 </div>
                 <div class="grid-5 grid-m-12 grid-s-12">
                     <figure>
