--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <meta name="theme-color" content="#222" />
+    <meta name="theme-color" content="#C6FF00" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
@@ -33,22 +33,26 @@
 <body>
 
     <!-- HEADER -->
-    <header class="header">
+    <header class="secao header">
         <div class="container">
             <div class="header-wrap">
                 <div class="grid-7 grid-m-12 grid-s-12">
                     <h1>FDX Components</h1>
-                    <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, explicabo!</h2>
+                    <h2>Componentes simples e eficientes, prontos para serem utilizados e customizados!</h2>
                     <div class="btn-container">
                         <a href="#" class="btn">Download</a>
+                        <a href="https://github.com/felipeacelino/fdx-components" class="btn"><i class="fab fa-github"></i> GitHub</a>
                     </div>
                 </div>
                 <div class="grid-5 grid-m-12 grid-s-12">
-                    <figure>
-                        <img src="assets/img/profile.jpg" alt="Profile">
-                    </figure>
+                    <a href="https://felipeacelino.github.io/" target="_blank" title="Felipe Acelino - Full-Stack Developer">
+                        <figure>
+                            <img src="assets/img/profile.jpg" alt="Profile">
+                        </figure>
+                    </a>
                 </div>
             </div>
+            <a href="#" class="header-scroll"></a>
         </div>
     </header>
     <!-- //HEADER -->
